implementing metrics calculation